FF buttons don't fit on 50% of panel. Changing to grow fixes this.
FF buttons are insanely large, they don't fit on the panel if button
width if 50% of panel. Grow allows them to use all the space they need
while chrome buttons still fill the space they have.

--- a/skirmish.css
+++ b/skirmish.css
@@ -29,32 +29,26 @@ body {
 }
 
 #DarkModeButton {
-    width: 51%;
-    min-width: 80px;
     order:1;
+    flex-grow: 1;
 }
 
 #LightModeButton {
-    width: 51%;
-    min-width: 80px;
     order:1;
+    flex-grow: 1;
     display: none;
 }
 
 #SpawnRedButton {
     display: inline;
-    width: 50%;
-    min-width: 57px;
     order:2;
-    /*flex-grow:1;*/
+    flex-grow:1;
 }
 
 #SpawnBlueButton {
     display: inline;
-    width: 50%;
-    min-width: 57px;
     order:3;
-    /*flex-grow:1;*/
+    flex-grow:1;
 }
 
 
